--- a/sass/general.scss
+++ b/sass/general.scss
@@ -5,9 +5,28 @@
     padding: 0;
     box-sizing: border-box;
 }
-// html{
-//     font-size: 62.5%;
-// }
-// body{
+html{
+    font-size: 62.5%;
+}
+body{
+    font-size: 1.8rem;
+    height: 100vh;
+    width: 100vw;
+    background: linear-gradient(to left,#afd4dc,#b3ebe2);
+    font-family: variables.$fuente-primaria;
+    display: flex;
+    align-items: center;
+}
+.conteiner{
+    width: 95%;
+    max-width: 360px;
+    min-width: 315px;
+    height: 90vh;
+    margin: auto;
+    background: #000;
+    border-radius: 20px;
+    // z-index: 1;
 
-// }
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+}
