--- a/sass/gastos.scss
+++ b/sass/gastos.scss
@@ -1,33 +1,103 @@
 @use './variables.scss';
 
 .gastos{
-    border: solid 3px rgb(21, 243, 172);
+    border: solid 4px rgb(42, 233, 67);
     background: #fff;
     border-radius: 20px;
     padding: 10px;
-    // height: 100%;
+    height: 100%;
     position: relative;
-    // z-index: 10;
+    z-index: 10;
 
     &__titulo{
         font-weight: 700;
         font-size: 2.2rem;
         margin-bottom: 8px;
+        position: relative;
+        z-index: 30;
     }
     &__mensaje{
-        border: solid 4px red;
         width: 100%;
         height: 100%;
-        position: relative;
+        position: absolute;
         top: 0;
         left: 0;
         display: flex;
         align-items: center;
         justify-content: center;
         color: variables.$color-fecha;
-        // display: none;
+        z-index: 20;
+        display: none;
         &--active{
             display: flex;
+        }
+    }
+    &__lista{
+        border: solid 4px red;
+        display: flex;
+        flex-wrap: wrap;
+        align-content:flex-start;
+        gap: 10px;
+        max-height: 70vh;
+        overflow: auto;
+    }
+}
+
+.gasto{
+    // border: 2px solid green;
+    display: flex;
+    gap: 10px;
+    flex-wrap: nowrap;
+    overflow: hidden;
+    scroll-snap-type: x mandatory;
+    &__info{
+        border: 2px solid variables.$color-gris-claro;
+        scroll-snap-align: start;
+        min-width: 100%;
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
+        border-radius: 10px;
+        padding: 10px;
+        cursor: pointer;
+    }
+    &__nombre{
+        margin-bottom: 5px;
+    }
+    &__cantidad{
+        font-size: 2.2rem;
+        color: variables.$color-primario;
+    }
+    &__fecha{
+        font-size: 1.6rem;
+        color: variables.$color-fecha;
+    }
+    &__acciones{
+        scroll-snap-align: start;
+        display: flex;
+        gap: 20px;
+    }
+    &__btn{
+        border: none;
+        cursor: pointer;
+        background: variables.$color-gris-claro;
+        width: 80px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+        border-radius: 10px;
+        transition: 0.3s ease all;
+        &:hover{
+            background: variables.$color-gris-claro-hover;
+        }
+        &--rojo{
+            background: variables.$color-rojo;
+            color: #fff;
+            &:hover{
+                background:variables.$color-rojo-hover ;
+            }
         }
     }
 }
