--- a/sass/general.scss
+++ b/sass/general.scss
@@ -10,8 +10,7 @@ html{
 }
 body{
     font-size: 1.8rem;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
     background: linear-gradient(to left,#afd4dc,#b3ebe2);
     font-family: variables.$fuente-primaria;
     display: flex;
@@ -25,7 +24,8 @@ body{
     margin: auto;
     background: #000;
     border-radius: 20px;
-    // z-index: 1;
+    position: relative;
+    z-index: 1;
 
     display: grid;
     grid-template-rows: auto 1fr auto;
