--- a/sass/general.scss
+++ b/sass/general.scss
@@ -11,7 +11,7 @@ html{
 body{
     font-size: 1.8rem;
     min-height: 100vh;
-    background: linear-gradient(to left,#afd4dc,#b3ebe2);
+    background: linear-gradient(to left,#7cdff6,#858887 ,#7cdff6);
     font-family: variables.$fuente-primaria;
     display: flex;
     align-items: center;
