--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,4 +1,6 @@
 @use './general.scss';
 @use './header.scss';
 @use './main.scss';
-@use './gastos.scss'
+@use './gastos.scss';
+@use './formularioGasto.scss';
+@use './footer.scss';
